[package]
name = "desk_band_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["dylib"]

[dependencies]
once_cell = "1.17.1"
log = "0.4.17"
log4rs = "1.2.0"

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Ole",
    "Win32_System_Com",
    "implement",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
]